--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
         <header class="header">
             <h1>Jessica Register</h1>
             <p>DevOps Engineer</p>
-            <p>john.doe@example.com</p>
+            <p>jrmoose23@hotmail.com</p>
             <p>Total Experience: 3+ Years</p>
         </header>
 
